--- a/components/headerWithFilter/HeaderWithFilter.module.css
+++ b/components/headerWithFilter/HeaderWithFilter.module.css
@@ -1,13 +1,13 @@
 .header__container {
   position: fixed;
-  padding: 5rem calc(3.5vw + 24px);
-  padding-bottom: 1rem;
+  padding: 1rem calc(3.5vw + 24px);
+  padding-top: 5.5rem;
   margin: 0;
   top: 0;
   left: 0;
   width: 100%;
   background: var(--bg);
-  z-index: 20;
+  z-index: 30;
 }
 
 .header__title {
@@ -42,6 +42,10 @@
   cursor: pointer;
 }
 
+.header__filterButton_active {
+  background: rgba(0, 0, 0, 0.9);
+}
+
 .header__filterButtonContainer {
   position: relative;
   display: flex;
@@ -68,7 +72,7 @@
   border-radius: 4px;
   background-color: rgb(24, 24, 24);
   border: 1px solid rgba(255, 255, 255, 0.2);
-  z-index: 20;
+  z-index: 60;
 
   transition-property: opacity, visibility;
   transition-duration: 250ms;
@@ -79,6 +83,11 @@
 .dropDownMenu__link {
   display: flex;
   align-items: center;
+}
+
+.dropDownMenu__link:hover .dropDownMenu__text {
+  color: white;
+  border-left: 1px solid white;
 }
 
 .dropDownMenu__text {
@@ -95,4 +104,19 @@
 .dropDownMenu_active {
   visibility: visible;
   opacity: 1;
+}
+
+.hideFilterDropDownBlock {
+  position: fixed;
+  border: none;
+  margin: 0;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: transparent;
+  z-index: 50;
+  cursor: default;
+  outline: 2px solid transparent;
 }
